Fixed overlap on signup errors

--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -51,7 +51,7 @@ button:disabled:hover{
 
   .errors {
     position: absolute;
-    top: 92%;
+    top: 75%;
     left: 0;
   }
 
